# research-assistant

./: .env.example  .gitignore  improver.py  input.txt  main.py  manage_db.py  openrouter_client.py  output_final.md  output_intermediate.md  plan.md  pyproject.toml  researcher.py  reviewer.py
data/input/: input.txt
docs/: MODELS.md  plan.md
prompts/: improver.txt  researcher.txt  reviewer.txt
src/research_assistant/: common.py  db.py  improver.py  main.py  openrouter_client.py  researcher.py  reviewer.py  step1_clarify.py  step2_finalize.py  step3_research.py
