[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
app = "research_assistant.main:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/research_assistant"]
